// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventListPresenter /> when filtered 1`] = `
<Flex
  direction="column"
  height="100%"
  position="relative"
>
  <styled.div>
    <styled.div>
      <Styled(Styled(styled.h4))>
        title
      </Styled(Styled(styled.h4))>
      <styled.div
        height="4px"
      />
      <Styled(styled.input)
        data-test-id="event-list-search"
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value="Query"
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <ScrollableList
      data={
        Array [
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
        ]
      }
      scrollIndex={0}
    >
      <Component />
    </ScrollableList>
  </styled.div>
</Flex>
`;

exports[`<EventListPresenter /> when loading 1`] = `
<Flex
  direction="column"
  height="100%"
  position="relative"
>
  <styled.div>
    <styled.div>
      <Styled(Styled(styled.h4))>
        title
      </Styled(Styled(styled.h4))>
      <styled.div
        height="4px"
      />
      <Styled(styled.input)
        data-test-id="event-list-search"
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value=""
      />
    </styled.div>
  </styled.div>
  <CenteredLoader />
</Flex>
`;

exports[`<EventListPresenter /> when passed no events 1`] = `
<Flex
  direction="column"
  height="100%"
  position="relative"
>
  <styled.div>
    <styled.div>
      <Styled(Styled(styled.h4))>
        title
      </Styled(Styled(styled.h4))>
      <styled.div
        height="4px"
      />
      <Styled(styled.input)
        data-test-id="event-list-search"
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <Styled(Styled(styled.h4))
      data-test-id="no-events-message"
    >
      No events matching query
    </Styled(Styled(styled.h4))>
  </styled.div>
</Flex>
`;

exports[`<EventListPresenter /> with active event 1`] = `
<Flex
  direction="column"
  height="100%"
  position="relative"
>
  <styled.div>
    <styled.div>
      <Styled(Styled(styled.h4))>
        title
      </Styled(Styled(styled.h4))>
      <styled.div
        height="4px"
      />
      <Styled(styled.input)
        data-test-id="event-list-search"
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <ScrollableList
      data={
        Array [
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
        ]
      }
      scrollIndex={0}
    >
      <Component />
    </ScrollableList>
  </styled.div>
</Flex>
`;

exports[`<EventListPresenter /> with no active event 1`] = `
<Flex
  direction="column"
  height="100%"
  position="relative"
>
  <styled.div>
    <styled.div>
      <Styled(Styled(styled.h4))>
        title
      </Styled(Styled(styled.h4))>
      <styled.div
        height="4px"
      />
      <Styled(styled.input)
        data-test-id="event-list-search"
        onChange={[Function]}
        placeholder="Search..."
        type="text"
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <ScrollableList
      data={
        Array [
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
          Object {
            "clientId": 1,
            "createdAt": 1529336865706,
            "id": 1,
            "integrationId": 1,
            "modifiedAt": 1529336865706,
            "name": "Some Event",
            "seasonId": 1,
            "timestamp": 1529336865706,
            "venueId": 1,
          },
        ]
      }
      scrollIndex={-1}
    >
      <Component />
    </ScrollableList>
  </styled.div>
</Flex>
`;
